--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header>
+    <header> 
       <nav> 
         <ul>
           <li><a href = "index.html">HOME</a</li>
@@ -23,6 +23,8 @@
         <div>B</div>
         <div>C</div>
       </section>
+
+      <p>Welcome to my website, I hope you enjoy</p>
 
       <section>Lower-Section
         <img src = "backgroundimage.png">
